[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "a2emutools"
dynamic = ["version"]
description = "Tools for manipulating Apple 2 emulator disk files"
authors = [ { name = "Randall Frank", email = "frogboots.000@gmail.com" } ]
maintainers  = [ { name = "Randall Frank", email = "frogboots.000@gmail.com" } ]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.2",
    "numpy>=1.21.0,<3",
]
readme = {file = "README.rst", content-type = "text/x-rst"}

[tool.setuptools.dynamic]
version = {attr = "a2emutools.__version__"}

[project.urls]
Homepage = "https://github.com/randall-frank/a2emutools"
Repository = "https://github.com/randall-frank/a2emutools.git"
Issues = "https://github.com/randall-frank/a2emutools/issues"
Changelog = "https://github.com/randall-frank/a2emutools/blob/master/CHANGELOG.md"

[project.scripts]
a2emutools = "a2emutools.cli:run"

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "pre-commit>=3.3.3",
    "setuptools>68.0.0",
]
doc = [
    "Sphinx==8.0.2",
    "numpydoc==1.8.0",
    "sphinx-copybutton==0.5.2",
    "requests>=2.28.2",
]

[tool.black]
line-length = 100
src_paths = ["src", "doc"]

[tool.codespell]
ignore-words-list = "a2e, dsk, 2mg, a2emutools"
quiet-level = 3
skip = "*.pyc,*.xml,*.gif,*.png,*.jpg,*.js,*.html,*.svg"

[tool.isort]
profile = "black"
skip_gitignore = true
force_sort_within_sections = true
line_length = 100
filter_files = true
src_paths = ["src", "doc"]

[pydocstyle]
convention = "numpy"
